# Mango

./: .gitignore  Cargo.toml
config/: Cargo.toml  README.md
config/data/metrics/: prometheus.yml
config/generate-key/: Cargo.toml
config/generate-key/src/: lib.rs  main.rs
config/global-constants/: Cargo.toml
config/global-constants/src/: lib.rs
config/management/: Cargo.toml  README.md
config/management/genesis/: Cargo.toml  README.md
config/management/network-address-encryption/: Cargo.toml
config/management/operational/: Cargo.toml  README.md
config/management/src/: config.rs  error.rs  lib.rs  secure_backend.rs  storage.rs  transaction.rs  validator_config.rs  waypoint.rs
config/seed-peer-generator/: Cargo.toml
config/seed-peer-generator/src/: lib.rs  main.rs  utils.rs
config/src/: generator.rs  keys.rs  lib.rs  network_id.rs  utils.rs
config/src/config/: consensus_config.rs  debug_interface_config.rs  error.rs  execution_config.rs  json_rpc_config.rs  key_manager_config.rs  logger_config.rs  mempool_config.rs  mod.rs  network_config.rs  safety_rules_config.rs  secure_backend_config.rs  state_sync_config.rs  storage_config.rs  test_config.rs  upstream_config.rs
consensus/: Cargo.toml  README.md
consensus/consensus-types/: Cargo.toml
consensus/consensus-types/src/: block.rs  block_data.rs  block_retrieval.rs  block_test.rs  block_test_utils.rs  common.rs  epoch_retrieval.rs  executed_block.rs  lib.rs  proposal_msg.rs  quorum_cert.rs  safety_data.rs  sync_info.rs  timeout.rs  timeout_2chain.rs  timeout_certificate.rs  vote.rs  vote_data.rs  vote_msg.rs  vote_proposal.rs
consensus/safety-rules/: Cargo.toml
consensus/safety-rules/benches/: safety_rules.rs
consensus/safety-rules/src/: configurable_validator_signer.rs  consensus_state.rs  counters.rs  error.rs  fuzzing_utils.rs  lib.rs  local_client.rs  logging.rs  main.rs  process.rs  (+9 more)
consensus/src/: consensus_provider.rs  counters.rs  epoch_manager.rs  error.rs  lib.rs  logging.rs  metrics_safety_rules.rs  network.rs  network_interface.rs  network_tests.rs  pending_votes.rs  persistent_liveness_storage.rs  round_manager.rs  round_manager_fuzzing.rs  round_manager_test.rs  state_computer.rs  state_replication.rs  txn_manager.rs
crates/debug-interface/: Cargo.toml
crates/mango/: Cargo.toml  README.md
crates/mango-assets-proof/: Cargo.toml  README.md
crates/mango-bitvec/: Cargo.toml
crates/mango-client/: Cargo.toml
crates/mango-crypto/: Cargo.toml  README.md
crates/mango-documentation-tool/: Cargo.toml
crates/mango-faucet/: Cargo.toml  README.md
crates/mango-json-rpc-client/: Cargo.toml
crates/mango-logger/: Cargo.toml
crates/mango-metrics/: Cargo.toml  build.rs
crates/mango-rate-limiter/: Cargo.toml
crates/mango-time-service/: Cargo.toml
crates/short-hex-str/: Cargo.toml
framework/: CONTRIBUTING.md  Cargo.toml  README.md
framework/modules/: AccountAdministrationScripts.move  AccountCreationScripts.move  AccountFreezing.move  Authenticator.move  ChainId.move  CoreAddresses.move  DesignatedDealer.move  Diem.move  DiemAccount.move  DiemConfig.move  DiemConsensusConfig.move  DiemId.move  DiemSystem.move  DiemTimestamp.move  DiemVMConfig.move  DiemVersion.move  DualAttestation.move  Genesis.move  PaymentScripts.move  RegisteredCurrencies.move  Roles.move  Signature.move  SlidingNonce.move  SystemAdministrationScripts.move  TransactionFee.move  TreasuryComplianceScripts.move  VASP.move  ValidatorAdministrationScripts.move  ValidatorConfig.move  XDX.move  XUS.move  overview_template.md  references_template.md
framework/releases/: Cargo.toml
framework/script_documentation/: script_documentation_template.md  spec_documentation_template.md
framework/src/: lib.rs  main.rs  release.rs
framework/tests/: generated_files.rs  move_unit_test.rs
json-rpc/: API-CHANGELOG.md  Cargo.toml  README.md  json-rpc-spec.md
json-rpc/docs/: client_checklist.md  client_implementation_guide.md  method_get_account.md  method_get_account_transaction.md  method_get_account_transactions.md  method_get_account_transactions_with_proofs.md  method_get_currencies.md  method_get_events.md  method_get_metadata.md  method_get_transactions.md  method_submit.md  type_account.md  type_event.md  type_metadata.md  type_transaction.md
json-rpc/integration-tests/: Cargo.toml
json-rpc/src/: counters.rs  data.rs  fuzzing.rs  lib.rs  methods.rs  runtime.rs  util.rs
json-rpc/types/: Cargo.toml
mango-node/: Cargo.toml
mango-node/src/: lib.rs  main.rs
mempool/: Cargo.toml  README.md
mempool/src/: counters.rs  lib.rs  logging.rs
network/: Cargo.toml  README.md
network/benches/: network_bench.rs  socket_bench.rs
network/builder/: Cargo.toml
network/discovery/: Cargo.toml
network/memsocket/: Cargo.toml
network/netcore/: Cargo.toml
network/socket-bench-server/: Cargo.toml
network/src/: constants.rs  counters.rs  error.rs  fuzzing.rs  lib.rs  logging.rs
sdk/: Cargo.toml  README.md  publishing.md
sdk/compatibility/: Cargo.toml
sdk/offchain/: Cargo.toml
sdk/src/: lib.rs  transaction_builder.rs  types.rs
sdk/transaction-builder/: Cargo.toml
types/: Cargo.toml
types/src/: access_path.rs  account_address.rs  account_state.rs  account_state_blob.rs  block_info.rs  block_metadata.rs  chain_id.rs  contract_event.rs  diem_id_identifier.rs  diem_timestamp.rs  epoch_change.rs  epoch_state.rs  event.rs  ledger_info.rs  lib.rs  mempool_status.rs  move_resource.rs  proptest_types.rs  state_proof.rs  trusted_state.rs  validator_config.rs  validator_info.rs  validator_signer.rs  validator_verifier.rs  vm_status.rs  waypoint.rs  write_set.rs
vm/: Cargo.toml  README.md
vm-validator/: Cargo.toml
vm-validator/src/: lib.rs  vm_validator.rs
vm/mvhashmap/: Cargo.toml
vm/parallel-executor/: Cargo.toml
vm/src/: access_path_cache.rs  adapter_common.rs  counters.rs  data_cache.rs  diem_transaction_validator.rs  diem_vm.rs  diem_vm_impl.rs  errors.rs  foreign_contracts.rs  lib.rs  logging.rs  natives.rs  script_to_script_function.rs  system_module_names.rs  transaction_metadata.rs
(+975 files in other folders)
