[package]
name = "mango-framework"
version = "0.1.0"
edition = "2018"


[dependencies]
move-bytecode-verifier = { workspace = true }
move-abigen = { workspace = true }
move-docgen = { workspace = true }
move-command-line-common = { workspace = true }
move-errmapgen = { workspace = true }
move-compiler = { workspace = true }
move-prover = { workspace = true }
mango-crypto = { workspace = true }
mango-types = { workspace = true }

move-binary-format = { workspace = true }
move-stdlib = { workspace = true }
move-symbol-pool = { workspace = true }
move-core-types = { workspace = true }
move-vm-types = { workspace = true }
move-vm-runtime = { workspace = true }


bcs = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
once_cell = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
datatest-stable = { workspace = true }
move-unit-test = { workspace = true }
mango-vm = { workspace = true }

tempfile = { workspace = true }
dir-diff = { workspace = true }
