[package]
name = "mango-json-rpc"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow ={ workspace = true }
fail = { workspace = true }
futures ={ workspace = true }
hex ={ workspace = true }
hyper = { workspace = true }
once_cell  = { workspace = true }
rand = { workspace = true }
serde_json ={ workspace = true }
serde = { workspace = true }
tokio ={ workspace = true }
tokio-retry = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
warp = { workspace = true }
reqwest = { workspace = true }
proptest  = { workspace = true }
regex = { workspace = true }
bcs = { workspace = true }
mango-framework-releases = { workspace = true }
mango-client = { workspace = true }
mango-config = { workspace = true }
mango-crypto = { workspace = true }
diemdb = { workspace = true }
mango-json-rpc-types = { workspace = true }
mango-infallible = { workspace = true }
mango-logger ={ workspace = true }
mango-mempool = { workspace = true }
mango-metrics = { workspace = true }
mango-proptest-helpers = { workspace = true }
mango-types = { workspace = true }
mango-temppath = { workspace = true }
executor = { workspace = true }
executor-types = { workspace = true }
move-core-types = { workspace = true }
move-vm-types = { workspace = true }
network = { workspace = true }
move-resource-viewer =  { workspace = true }
mango-scratchpad = { workspace = true }
storage-interface = { workspace = true }
thiserror ={ workspace = true }
vm-genesis = { workspace = true }

[dev-dependencies]


generate-key = { workspace = true }
mango-genesis-tool = { workspace = true }
vm-validator = { workspace = true }
mango-framework-releases = { workspace = true }

executor = { workspace = true }
executor-types = { workspace = true }
move-vm-types = { workspace = true }
mango-transaction-builder = { workspace = true }
mango-sdk = { workspace = true }

