[package]
name = "mango-mempool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow ={ workspace = true }
fail = { workspace = true }
futures ={ workspace = true }
itertools ={ workspace = true }
once_cell  = { workspace = true }
proptest  = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
tokio ={ workspace = true }
tokio-stream = { workspace = true }

bounded-executor = { workspace = true }
channel = { workspace = true }
bcs = { workspace = true }
mango-config = { workspace = true }
mango-crypto = { workspace = true }
mango-logger ={ workspace = true }
mango-metrics = { workspace = true }
mango-infallible = { workspace = true }
mango-proptest-helpers = { workspace = true }
mango-types = { workspace = true }

mirai-annotations ={ workspace = true }
mempool-notifications = { workspace = true }
network = { workspace = true }
rand = { workspace = true }
netcore = { workspace = true }
serde_json ={ workspace = true }
short-hex-str ={ workspace = true }
storage-interface = { workspace = true }
subscription-service = { workspace = true }
vm-validator = { workspace = true }

storage-service = { workspace = true }

[dev-dependencies]
enum_dispatch = { workspace = true }
proptest  = { workspace = true }


