[package]
name = "mango-types"
version = "0.0.2"
edition = "2018"

[dependencies]
aes-gcm  = { workspace = true }
anyhow ={ workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
hex ={ workspace = true }
itertools = { workspace = true }
once_cell  = { workspace = true }
mirai-annotations ={ workspace = true }
proptest  = { workspace = true }
proptest-derive = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json ={ workspace = true }
serde_bytes = { workspace = true }
thiserror ={ workspace = true }
tiny-keccak = { workspace = true }

bcs = { workspace = true }
mango-crypto = { workspace = true }
mango-crypto-derive = { workspace = true }
move-core-types = { workspace = true }
move-vm-test-utils = { workspace = true}


[dev-dependencies]
regex = { workspace = true }
proptest  = { workspace = true  }
proptest-derive  = { workspace = true }
serde_json ={ workspace = true }
mango-crypto = { workspace = true}
move-core-types = { workspace = true }

