[package]
name = "mango-vm"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow ={ workspace = true }
fail = { workspace = true }
once_cell  = { workspace = true }
rayon = { workspace = true }
mirai-annotations ={ workspace = true }
tracing = { workspace = true }

bcs = { workspace = true }
mango-crypto = { workspace = true }
mango-logger = { workspace = true }
mango-metrics = { workspace = true }
mango-state-view = { workspace = true }
mango-types = { workspace = true }

move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
move-binary-format = { workspace = true }
move-stdlib = { workspace = true }
mango-framework = { workspace = true }
serde_json ={ workspace = true }
serde = { workspace = true }


[dev-dependencies]
proptest  = { workspace = true }
mango-types = { workspace = true }
mango-framework-releases = { workspace = true }
