[package]
name = "mango-management"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow ={ workspace = true }
hex ={ workspace = true }
serde ={ workspace = true }
serde_yaml ={ workspace = true }
structopt ={ workspace = true }
thiserror ={ workspace = true }
toml ={ workspace = true }

bcs = { workspace = true }
mango-config ={ workspace = true }
mango-crypto = { workspace = true }
mango-global-constants ={ workspace = true }
mango-network-address-encryption = { workspace = true }
mango-secure-storage = { workspace = true }
mango-time-service ={ workspace = true }
mango-types = { workspace = true }

mango-temppath ={ workspace = true }
mango-transaction-builder ={ workspace = true }

[dev-dependencies]
mango-config ={ workspace = true }
