[package]
name = "debug-interface"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow ={ workspace = true }
bytes = { workspace = true }
tokio ={ workspace = true }
reqwest = { workspace = true }
warp = { workspace = true }

mango-logger = { workspace = true }
mango-metrics = { workspace = true }

