[package]
name = "mango-crypto"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow ={ workspace = true }
bytes = { workspace = true }
digest  = { workspace = true }
curve25519-dalek  = { workspace = true }
ed25519-dalek  = { workspace = true }
x25519-dalek  = { workspace = true }
hex ={ workspace = true }
hkdf  = { workspace = true }
once_cell  = { workspace = true }
mirai-annotations ={ workspace = true }
proptest  = { workspace = true }
proptest-derive = { workspace = true }
rand  = { workspace = true }
rand_core  = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde-name  = { workspace = true }
sha2  = { workspace = true }
static_assertions  = { workspace = true }
thiserror ={ workspace = true }
tiny-keccak  = { workspace = true }

aes-gcm  = { workspace = true }
mango-crypto-derive = { workspace = true }
bcs = { workspace = true }

[dev-dependencies]
bitvec  = { workspace = true }
byteorder  = { workspace = true }
proptest  = { workspace = true }
proptest-derive  = { workspace = true }
ripemd160  = { workspace = true }
criterion  = { workspace = true }
sha3  = { workspace = true }
serde_json ={ workspace = true }
trybuild  = { workspace = true }

[features]
u64 = []
u32 = []
fiat = []


[[bench]]
name = "noise"
harness = false

[[bench]]
name = "ed25519"
harness = false
