[package]
name = "mango-documentation-tool"
version = "0.1.0"
edition = "2018"

[dependencies]
serde_yaml ={ workspace = true }
serde-reflection = { workspace = true }
serde-generate = { workspace = true }
anyhow ={ workspace = true }
regex = { workspace = true }
structopt ={ workspace = true }
once_cell  = { workspace = true }



[dev-dependencies]
serde = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "diemdoc"
path = "src/main.rs"
test = false
