[package]
name = "mango-logger"
version = "0.1.0"
edition = "2018"

# Do NOT add any inter-project dependencies.
# This is to avoid ever having a circular dependency with the mango-logger crate.
[dependencies]
backtrace   = { workspace = true }
chrono  = { workspace = true }
erased-serde  = { workspace = true }
hostname  = { workspace = true }
mango-log-derive   = { workspace = true }
mango-infallible   = { workspace = true }

once_cell  = { workspace = true }
serde = { workspace = true }
serde_json ={ workspace = true }
prometheus   = { workspace = true }
tracing  = { workspace = true }
tracing-subscriber   = { workspace = true }
