[package]
name = "mango-metrics"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow ={ workspace = true }
futures ={ workspace = true }
hyper  = { workspace = true }
once_cell  = { workspace = true }
prometheus   = { workspace = true }
serde_json ={ workspace = true }
tokio ={ workspace = true }

mango-logger ={ workspace = true }
mango-metrics-core  = { workspace = true }


[dev-dependencies]
rusty-fork = { workspace = true }
assert_approx_eq = { workspace = true }
