[package]
name = "mango-time-service"
version = "0.1.0"
edition = "2018"

[dependencies]
enum_dispatch = { workspace = true }
futures  = { workspace = true }
pin-project = { workspace = true }
thiserror ={ workspace = true }
tokio = { workspace = true }

mango-infallible = { workspace = true }


[dev-dependencies]
futures ={ workspace = true }
pin-project = { workspace = true }
tokio-test = { workspace = true }

